--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,8 @@ dependencies:
   http: ^1.3.0 
   google_fonts: ^5.0.0
   flutter_svg: ^2.0.0
+  flutter_dotenv: ^5.1.0
   shared_preferences: ^2.1.4
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
@@ -60,3 +58,4 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - .env
