--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   shared_preferences: ^2.1.4
   cupertino_icons: ^1.0.8
   url_launcher: ^6.3.1
+  record: ^6.0.0
+  flutter_sound: ^9.28.0
 
 dev_dependencies:
   flutter_test:
